# sdk

./: .env.example  .gitignore  .prettierrc  .size-limit.json  .size-limit.ts  AGENTS.md  LICENSE  Makefile  biome.json  bun.lockb  context7.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.orchestrator.json  tsconfig.tests.json  tsconfig.type-tests.json  vitest.config.characterization.ts  vitest.config.contract.ts  vitest.config.core.ts  vitest.config.integration.ts  vitest.config.unit.ts
.changeset/: absorb-cross-chain-permission-into-tosession.md  add-app-fee-balances.md  add-disable-session.md  add-hca-account.md  add-protocol-fees.md  afraid-bottles-jump.md  angry-streets-like.md  app-fee-alps-quotes.md  avalanche-43114.md  beige-bats-listen.md  better-poems-attend.md  big-icons-shave.md  blanc-caip2-access-list.md  blanc-caip2-versioning.md  blanc-chain-token-amounts.md  blanc-client.md  blanc-orphaned-helpers.md  blanc-portfolio-per-chain-decimals.md  blanc-signing-path.md  blanc-submit-pipeline.md  blue-mails-hang.md  brave-dingos-smell.md  bright-clowns-clap.md  bright-lizards-admire.md  bump-shared-configs-1-6-7.md  bump-shared-configs-rhino.md  bump-shared-configs.md  bumpy-bags-tell.md  (+302 more)
crates/eip712-mapper/core/: Cargo.toml  README.md
crates/eip712-mapper/core/src/: compact.rs  dispatch.rs  input.rs  lib.rs  permit2.rs  serde_helpers.rs  single_chain.rs  types.rs  util.rs
crates/eip712-mapper/viem/: Cargo.toml  README.md
crates/eip712-mapper/viem/src/: lib.rs  serialize.rs  types.rs  util.rs
(+621 files in other folders)
