[package]
name = "eip712-mapper-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
dev = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-primitives = { version = "1.5", default-features = false, features = ["std", "serde"] }
